native controller policies deployment
There is also additions to the scripts to invoke commands
externally to the container and had the environment setup.

Issue-ID: POLICY-2388
Signed-off-by: jhh <jorge.hernandez-herrero@att.com>
Change-Id: Id41f04d10a28d2ea86bdd41334e499c28d0438ae